RESOLVED FIXED198905
Experiment with simple structured bindings use
https://bugs.webkit.org/show_bug.cgi?id=198905
Summary Experiment with simple structured bindings use
Sam Weinig
Reported 2019-06-16 13:05:13 PDT
Experiment with simple structured bindings use
Attachments
Patch (1.40 KB, patch)
2019-06-16 13:06 PDT, Sam Weinig
no flags
Try again (1.40 KB, patch)
2019-06-25 17:15 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2019-06-16 13:06:48 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 2 2019-06-16 13:09:53 PDT Comment hidden (obsolete)
Sam Weinig
Comment 3 2019-06-16 13:16:28 PDT
(In reply to Build Bot from comment #2) > Attachment 372227 [details] did not pass style-queue: > > > ERROR: Source/WTF/wtf/URLHelpers.cpp:732: Extra space before [. > [whitespace/brackets] [5] > Total errors found: 1 in 2 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style. Filed https://bugs.webkit.org/show_bug.cgi?id=198906 for this.
Darin Adler
Comment 4 2019-06-17 10:24:11 PDT
Comment on attachment 372227 [details] Patch Looks like this is going to work once we upgrade those last two EWS bots.
Sam Weinig
Comment 5 2019-06-25 17:15:37 PDT
Created attachment 372882 [details] Try again
EWS Watchlist
Comment 6 2019-06-25 17:18:52 PDT
Attachment 372882 [details] did not pass style-queue: ERROR: Source/WTF/wtf/URLHelpers.cpp:732: Extra space before [. [whitespace/brackets] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7 2019-06-25 19:00:53 PDT
Comment on attachment 372882 [details] Try again Clearing flags on attachment: 372882 Committed r246826: <https://trac.webkit.org/changeset/246826>
WebKit Commit Bot
Comment 8 2019-06-25 19:00:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-06-26 16:46:03 PDT
Radar WebKit Bug Importer
Comment 10 2019-06-26 16:46:05 PDT
Note You need to log in before you can comment on or make changes to this bug.