Experiment with simple structured bindings use https://bugs.webkit.org/show_bug.cgi?id=198905

Reviewed by Darin Adler.

* wtf/URLHelpers.cpp:
(WTF::URLHelpers::mapHostNames):
Simplify code using c++ structured bindings (https://en.cppreference.com/w/cpp/language/structured_binding)
to see if all the platforms will work with it.


Canonical link: https://commits.webkit.org/213178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246826 268f45cc-cd09-0410-ab3c-d52691b4dbfc